--- a/ajax.html
+++ b/ajax.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=UqaUsYhjQLYhftebMS3FdGoyPajTfzIq"></script>
+        <script src="script/jquery></script>
+        <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=UqaUsYhjQLYhftebMS3FdGoyPajTfzIq&s=1"></script>
         <style>
             #msg{
                 width: 70%;
